--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,9 @@
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+<html>
+  <head>
+    <title>Angular App</title>
+  </head>
+  <body>
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!-- <link rel="stylesheet" type="text/css"  href="assets/css/material-dashboard" rel="stylesheet" /> -->
@@ -183,3 +188,6 @@
       });
     });
   </script>
+
+  </body>
+</html>
